CHANGELOG/v2.2.5/CHANGELOG.md
<img width="1800" height="766" alt="新版本" src="https://github.com/SECTL/SecRandom/blob/master/data/assets/icon/secrandom-release.png" />
v2.0 - Koharu（小鸟游星野） release 4

## 🚀 主要更新

- 新增 **引导功能**，全新**设置向导**流程
- 新增 **抽奖显示样式**，新增**更多格式**选项
- 新增 **数据备份**，新增**备份管理**
- 新增 **IPC 数据接口**，新增只读名单/历史

## 💡 功能优化

- 优化 **核心架构**，托盘/工具提取**常量**
- 优化 **抽奖功能**，提取**UI工具类**
- 优化 **通知服务**，精简**冗余**并优化动画
- 优化 **IPC/URL**，按**软件名**定位通道
- 优化 **语音功能**，整合**音量控制**并降内存
- 优化 **音频模块**，提升音乐播放**响应**
- 优化 **字体与主题**，简化**加载/图标**
- 优化 **系统配置**，重构**IO**与系统检测
- 优化 **结果显示**，提升**颜色/图片**性能
- 优化 **数据导出**，统一**通用导出**逻辑
- 优化 **抽奖动画**，过程同步显示**学生**
- 优化 **数据导入**，增加更多导入数据文件夹
- 优化 **路径统一**，统一更多文件的**路径处理**

## 🐛 修复问题

- 修复 **抽取逻辑**，修复**类型/参数**错误
- 修复 **学生导出**，修复**AttributeError**
- 修复 **音频模块**，修复**初始化/异常**问题
- 修复 **配置读取**，修复**空文件解析**错误
- 修复 **数据导入**，避免占用**失败**
- 修复 **数据导入**，修复覆盖确认**无法导入**
- 修复 **更新下载**，文件名改读**metadata**
- 修复 **抽奖显示**，修复格式映射**KeyError**
- 修复 **通知显示**，修复**父组件/回调**异常
- 修复 **抽奖通知**，修复小组显示并统一**分隔符**
- 修复 **点名功能**，修复**缓存键**重复问题
- 修复 **抽奖功能**，修复图片显示与**重复设置**
- 修复 **应用重启**，修复**无法重启**问题
- 修复 **历史页面**，修复排序**不显示**问题

## 🔧 其它变更

- 无

---

💝 **感谢所有贡献者为 SecRandom 项目付出的努力！**
